Fix language selector and articles width on small devices

--- a/src/styles/components/Nav.css
+++ b/src/styles/components/Nav.css
@@ -121,6 +121,15 @@
   height: 20px;
 }
 
+.mobile-lang-selection {
+  display: block;
+  margin-top: 1em;
+}
+
+.desktop-lang-selection {
+  display: none;
+}
+
 @media (min-width: 640px) {
   .primary-nav ul {
     display: flex !important;
@@ -146,6 +155,14 @@
 
   .menu-icon {
     display: none;
+  }
+
+  .desktop-lang-selection {
+    display: block;
+  }
+
+  .mobile-lang-selection {
+    display: none !important;
   }
 }
 
