--- a/src/styles/components/StoryPreview.css
+++ b/src/styles/components/StoryPreview.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
-  justify-content: flex-start;
+  justify-content: center;
   font-size: 1rem;
   width: 100%;
 }
@@ -15,6 +15,31 @@
   margin-bottom: 24px;
   box-sizing: content-box;
 }
+
+@media (min-width: 1024px) {
+  .stories-container article {
+	  width: calc(33.33% - 24px) !important;
+  }
+}
+
+@media (min-width: 1360px) {
+  .stories-container article {
+	  width: calc(25% - 24px) !important;
+  }
+}
+
+@media (min-width: 1580px) {
+  .stories-container article {
+	  width: calc(20% - 24px) !important;
+  }
+}
+
+@media (min-width: 1820px) {
+  .stories-container article {
+	  width: calc(16.66% - 24px) !important;
+  }
+}
+
 .stories-container .story-date{
   margin-left: 0px !important;
 }
